# OxiBot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TESTING-GUIDE.md
bridge/: README.md  package-lock.json  package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
crates/oxibot-agent/: Cargo.toml
crates/oxibot-agent/skills/github/: SKILL.md
crates/oxibot-agent/skills/skill-creator/: SKILL.md
crates/oxibot-agent/skills/tmux/: SKILL.md
crates/oxibot-agent/skills/tmux/scripts/: find-sessions.sh
crates/oxibot-agent/skills/weather/: SKILL.md
crates/oxibot-agent/src/: agent_loop.rs  context.rs  lib.rs  memory.rs  skills.rs  subagent.rs
crates/oxibot-agent/src/tools/: base.rs  filesystem.rs  message.rs  mod.rs  registry.rs  shell.rs  spawn.rs  web.rs
crates/oxibot-channels/: Cargo.toml
crates/oxibot-channels/src/: base.rs  discord.rs  email.rs  formatting.rs  lib.rs  manager.rs  slack.rs  telegram.rs  whatsapp.rs
crates/oxibot-cli/: Cargo.toml
crates/oxibot-cli/src/: channels_cmd.rs  cron_cmd.rs  gateway.rs  helpers.rs  main.rs  onboard.rs  repl.rs  status.rs
crates/oxibot-core/: Cargo.toml
crates/oxibot-core/src/: heartbeat.rs  lib.rs  types.rs  utils.rs
crates/oxibot-core/src/bus/: mod.rs  queue.rs  types.rs
crates/oxibot-core/src/config/: loader.rs  mod.rs  schema.rs
crates/oxibot-core/src/session/: manager.rs  mod.rs
crates/oxibot-cron/: Cargo.toml
crates/oxibot-cron/src/: lib.rs  service.rs  types.rs
crates/oxibot-providers/: Cargo.toml
crates/oxibot-providers/src/: http_provider.rs  lib.rs  registry.rs  traits.rs  transcription.rs
