[package]
name = "oxibot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for Oxibot"

[[bin]]
name = "oxibot"
path = "src/main.rs"

[features]
default = []
telegram = ["oxibot-channels/telegram"]
discord = ["oxibot-channels/discord"]
whatsapp = ["oxibot-channels/whatsapp"]
slack = ["oxibot-channels/slack"]
email = ["oxibot-channels/email"]

[dependencies]
oxibot-core = { workspace = true }
oxibot-agent = { workspace = true }
oxibot-providers = { workspace = true }
oxibot-channels = { workspace = true }
oxibot-cron = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
dirs-next = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
cron = "0.15"

[dev-dependencies]
tempfile = "3"
