[package]
name = "oxibot-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider HTTP clients for Oxibot"

[dependencies]
oxibot-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
